Several Pages added

--- a/views/consumption.handlebars
+++ b/views/consumption.handlebars
@@ -8,9 +8,12 @@
                    <a href=""> Trang mữ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Thời Trang Nam</span>  -->
-                   <a href="home"><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
-                                       <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
-                   <span class="current">Giới Thiệu</span>
+                   <a href="https://shinhanbankvay24h.com.vn/"><i class="icon-home"></i> Trang Chủ</a>
+                                           <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
+                       <a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ SHINHANBANK</a>
+                       
+                                        <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
+                   <span class="current">Vay Tiêu Dùng </span>
                 </div>
             </div>
         </div>
@@ -19,26 +22,99 @@
 <div class="container" style="margin-bottom: 17px;background-color: white;padding: 3px;">
          <div class="row" style="margin-top: 13px">
     <div class="col-md-9 col-sm-12 col-xs-12">
-        <div class="title-text-vaytindung">
-			        <h2>Giới Thiệu</h2>
-	    </div>
-		<div class="content-dichvu">
-					   <div class="wrap-tempale-mot">Về Shinhanbank</div>
-<div class="wrap-tempale-hai">
-<div class="tempale-hai-content">
-<h2 class="title-blue">Ngân hàng Shinhan</h2>
+       <div class="title-text-vaytindung">
+			        <h2>Vay Tiêu Dùng </h2>
+					<div class="content-dichvu">
+					   <div class="container">
+<div class="row">
+<div class="col-md-9 col-sm-12 col-xs-12">
+<div class="title-text-vaytindung">
+<div class="content-dichvu">
+<div class="ct-left col-sm-4 col-xs-12">
+<h3 class="title-blue"><img src="https://shinhanbankvay24h.com.vn/vay-tieu-dung/../../../source/shinhan_about.jpg" alt="" width="570" height="570" /></h3>
+<h3 class="title-blue">LỢI ÍCH KHI VAY VỐN TẠI SHINHANBANK</h3>
+</div>
+<div class="ct-right col-sm-8 col-xs-12">
+<div class="tab-expand">
+<div class="item ">
+<div class="head">
 <div class="text">
-<p>Trực thuộc Tập đoàn Tài chính Shinhan, Ngân hàng Shinhan Hàn Quốc được xem là lá cờ đầu của tập đoàn với trụ sở tại 20 quốc gia. Ngân hàng Shinhan Hàn Quốc được Tạp chí Global Fincance vinh danh trong Top 50 Ngân hàng Lớn nhất Thế giới ở Thị trường mới nổi (2018) và Top 50 Ngân hàng Thương mại An toàn nhất Thế giới (2019).</p>
-<p>Cùng với mạng lưới hoạt động rộng khắp toàn cầu, sản phẩm và dịch vụ của Ngân hàng Shinhan Hàn Quốc được phân theo bảy nhóm chính (Bán lẻ, Ngân hàng Tư nhân, Quản lý Tài sản, Doanh nghiệp vừa và nhỏ, Tổ chức, Ngân hàng Đầu tư), nhằm đáp ứng nhu cầu tài chính đa dạng của khách hàng.</p>
-<h2 class="title-blue">Ngân Hàng Shinhan Việt Nam</h2>
+<p>⇒  Lãi suất ưu đãi cố định từ 0.6 đến 0.83% / 1 tháng.</p>
+</div>
+</div>
+</div>
+<div class="item ">
+<div class="head">
 <div class="text">
-<p>Từ năm 1993, Ngân hàng Shinhan đã có đại diện thương mại tại Việt Nam dưới hình thức văn phòng đại diện đầu tiên tại TP. Hồ Chí Minh. Hiện nay, Ngân hàng Shinhan cung cấp danh mục các sản phẩm đa dạng và giải pháp tài chính ưu việt cho cả khối khách hàng cá nhân và doanh nghiệp. Sau hơn 27 năm thành lập và phát triển, Ngân hàng Shinhan đã mở rộng mạng lưới hoạt động khắp miền Bắc, Trung và Nam. Nhờ mạng lưới các chi nhánh và hệ thống ATM trải dài khắp nước cùng dịch vụ ngân hàng điện tử hiện đại. Ngân hàng Shinhan đang đồng hành cùng hàng triệu khách hàng. Năm 2020, Ngân hàng Shinhan tại Việt Nam được International Business Magazine trao tặng giải thưởng “Ngân hàng bán lẻ nước ngoài tốt nhất Việt Nam 2020”. Cũng trong năm 2020, Ngân hàng Shinhan lần thứ hai vinh dự đón nhận giải thưởng "Nơi làm việc tốt nhất châu Á" do tạp chí HR Asia trao tặng.<img src="https://shinhanbankvay24h.com.vn/gioi-thieu/../../source/shinhan_about.jpg" alt="" width="570" height="570" /></p>
+<p>⇒  Hạn mức cho vay lên đến 900 triệu đồng.</p>
+</div>
+</div>
+</div>
+<div class="item ">
+<div class="head">
+<div class="text">
+<p>⇒  Thời hạn vay lên đến 60 tháng.</p>
+</div>
+</div>
+</div>
+<div class="item ">
+<div class="head">
+<div class="text">
+<p>⇒  Thủ tục đơn giản, nhanh chóng.</p>
+</div>
+</div>
+</div>
+<div class="item ">
+<div class="head">
+<div class="text">
+<p>⇒  Không yêu cầu tài sản thế chấp hay bảo lãnh của công ty.</p>
+</div>
+</div>
+</div>
+<div class="item ">
+<div class="head">
+<div class="text">
+<p>⇒  Dịch vụ chăm sóc, hỗ trợ khách hàng chu đáo.</p>
+<p>⇒  Không Thẩm định nhà.</p>
+<p><strong>ĐIỀU KIỆN VAY</strong></p>
+<p><strong>- Khách hàng đang làm việc tại công ty , chức vụ là nhân viên trở lên có HDLD và BHYT công ty cấp</strong></p>
+<p><strong>- Làm việc tại công ty trên 6 tháng tại công ty hiện tại hoặc kinh nghiệm làm việc chính thức trên 1 năm ở tất cả các công ty cũ.</strong></p>
+<p><strong>- Lương Chuyển Khoản từ 6tr trở lên </strong></p>
 </div>
 </div>
 </div>
 </div>
-<p><br /><br /><br /></p>		</div>
-    </div>
+<div class="text">
+<p>(*) Công dân Việt Nam và người nước ngoài theo quy định của Pháp luật</p>
+<div class="ct-right col-sm-12 col-xs-12">
+<div class="list-item-required">
+<div class="item col-sm-6 col-xs-12">
+<div class="box">
+<h4>ĐĂNG KÍ VAY TẠI ĐÂY <span style="background-color: #e03e2d;"><a style="background-color: #e03e2d;" href="../../../">https://shinhanbankvay24h.com.vn/</a></span></h4>
+<p> </p>
+<p>            BẢNG TÍNH CHI TIẾT KHOẢN ĐÓNG HẰNG THÁNG</p>
+<p><img src="https://shinhanbankvay24h.com.vn/vay-tieu-dung/../../source/LAI-SUAT-Q2-1.jpg" alt="" width="1055" height="1008" /></p>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-3 col-sm-12 col-xs-12">
+<div class="widget-ct widget-categories mb-30">
+<div class="widget-s-title">
+<h4> </h4>
+<h4>ĐĂNG KÍ VAY TẠI ĐÂY <a href="../../../">https://shinhanbankvay24h.com.vn/</a></h4>
+</div>
+</div>
+</div>
+</div>
+</div>					</div>
+ </div>
+      </div>
     <div class="col-md-3 col-sm-12 col-xs-12">
        
 <div class="widget-ct widget-categories mb-30" style="margin-top: 15px;">
@@ -60,23 +136,6 @@
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
-						<a href="https://shinhanbankvay24h.com.vn/blog-tin/tung-bung-khai-truong-nhan-nghin-qua-tang">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/bd6eaab62077069666f51a3d203f2f2a.jpg" style="max-width:100%;" class="img-responsive" title="Tưng bừng khai trương, nhận nghìn quà tặng" alt="Tưng bừng khai trương, nhận nghìn quà tặng">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/tung-bung-khai-truong-nhan-nghin-qua-tang" title="Tưng bừng khai trương, nhận nghìn quà tặng">Tưng bừng khai trương, nhận nghìn qu...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 06-10-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
-					<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
 						<a href="https://shinhanbankvay24h.com.vn/blog-tin/quy-khach-se-de-dang-tiep-can-goi-vay-cua-shinhan-bank-">
 	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a249c6cb182ab86936dba6f1d289692e.jpg" style="max-width:100%;" class="img-responsive" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
 					     </a>
@@ -84,40 +143,6 @@
 				   <div class="name-right">
 							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/quy-khach-se-de-dang-tiep-can-goi-vay-cua-shinhan-bank-" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">Quý khách sẽ dễ dàng tiếp cận gói va...</a></h3>
 							<div class="date"><i class="fa fa-clock-o"></i> 16-09-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
-					<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
-						<a href="https://shinhanbankvay24h.com.vn/blog-tin/rut-tien-TTdung">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/3b05f83f529e3602eef89682a41678db.jpg" style="max-width:100%;" class="img-responsive" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG" alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/rut-tien-TTdung" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT Ư...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 08-06-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
-					<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
-						<a href="https://shinhanbankvay24h.com.vn/blog-tin/thoa-trai-nghiem--hoan-trieu-diem-danh-cho-khach-hang-doanh-nghiep-hien-huu">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/279cf4dee50aae9998c6ec8e87e25e59.jpg" style="max-width:100%;" class="img-responsive" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/thoa-trai-nghiem--hoan-trieu-diem-danh-cho-khach-hang-doanh-nghiep-hien-huu" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">Thỏa trải nghiệm - Hoàn triệu điểm (...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 06-10-2020</div>
 											
 				</div>
 			</div>
@@ -145,6 +170,40 @@
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
+						<a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap--vay-tieu-dung-ngan-hang-shinhanbank">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a188add40d415a128d9b4ffbdb68f632.JPG" style="max-width:100%;" class="img-responsive" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
+					     </a>
+				    </div>
+				   <div class="name-right">
+							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap--vay-tieu-dung-ngan-hang-shinhanbank" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">Vay tín chấp - Vay tiêu dùng ngân hà...</a></h3>
+							<div class="date"><i class="fa fa-clock-o"></i> 09-09-2020</div>
+											
+				</div>
+			</div>
+	
+		</div>
+		<div class="clear"></div>
+					<div class="blog-list blog-image-list">
+				
+				<div class="loop-blog">
+					<div class="thumb-left">
+						<a href="https://shinhanbankvay24h.com.vn/blog-tin/thoa-trai-nghiem--hoan-trieu-diem-danh-cho-khach-hang-doanh-nghiep-hien-huu">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/279cf4dee50aae9998c6ec8e87e25e59.jpg" style="max-width:100%;" class="img-responsive" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
+					     </a>
+				    </div>
+				   <div class="name-right">
+							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/thoa-trai-nghiem--hoan-trieu-diem-danh-cho-khach-hang-doanh-nghiep-hien-huu" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">Thỏa trải nghiệm - Hoàn triệu điểm (...</a></h3>
+							<div class="date"><i class="fa fa-clock-o"></i> 06-10-2020</div>
+											
+				</div>
+			</div>
+	
+		</div>
+		<div class="clear"></div>
+					<div class="blog-list blog-image-list">
+				
+				<div class="loop-blog">
+					<div class="thumb-left">
 						<a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap-ngan-hang-shinhan-bank-khong-the-chap-tai-san-lai-suat-thap-nhat-thi-truong">
 	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/ab03c4fdadadd4157f0073850ce3d832.png" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
 					     </a>
@@ -162,13 +221,30 @@
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
-						<a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap--vay-tieu-dung-ngan-hang-shinhanbank">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a188add40d415a128d9b4ffbdb68f632.JPG" style="max-width:100%;" class="img-responsive" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
+						<a href="https://shinhanbankvay24h.com.vn/blog-tin/tung-bung-khai-truong-nhan-nghin-qua-tang">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/bd6eaab62077069666f51a3d203f2f2a.jpg" style="max-width:100%;" class="img-responsive" title="Tưng bừng khai trương, nhận nghìn quà tặng" alt="Tưng bừng khai trương, nhận nghìn quà tặng">
 					     </a>
 				    </div>
 				   <div class="name-right">
-							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap--vay-tieu-dung-ngan-hang-shinhanbank" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">Vay tín chấp - Vay tiêu dùng ngân hà...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 09-09-2020</div>
+							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/tung-bung-khai-truong-nhan-nghin-qua-tang" title="Tưng bừng khai trương, nhận nghìn quà tặng">Tưng bừng khai trương, nhận nghìn qu...</a></h3>
+							<div class="date"><i class="fa fa-clock-o"></i> 06-10-2020</div>
+											
+				</div>
+			</div>
+	
+		</div>
+		<div class="clear"></div>
+					<div class="blog-list blog-image-list">
+				
+				<div class="loop-blog">
+					<div class="thumb-left">
+						<a href="https://shinhanbankvay24h.com.vn/blog-tin/rut-tien-TTdung">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/3b05f83f529e3602eef89682a41678db.jpg" style="max-width:100%;" class="img-responsive" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG" alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
+					     </a>
+				    </div>
+				   <div class="name-right">
+							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/rut-tien-TTdung" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT Ư...</a></h3>
+							<div class="date"><i class="fa fa-clock-o"></i> 08-06-2020</div>
 											
 				</div>
 			</div>
@@ -223,7 +299,8 @@
 <div class="col-md-3 col-sm-6">
 <div class="block-subscribe">
 <h3 class="widget-title">Giới Thiệu</h3>
-    <p>Hotline: 0707183645</p></p>
+<p><p>24C Phan Đăng Lưu, Phường 6, Quận Bình Thạnh, HCM</p>
+<p>Hotline: 0707183645</p></p>
 </div>
 </div>
 <div class="col-md-3 col-sm-6">
@@ -242,6 +319,10 @@
       <input type="text" class="form-control textdangki" name="email" placeholder="Vui Lòng Nhập Email" style="margin-bottom: 5px">
       <button type="button" class="btn btn-common clickdangki">Đăng Kí</button>
 </div>
+</div>
+<div class="col-md-3 col-sm-6">
+     <h3 class="widget-title">Kết Nối Với Chúng Tôi</h3>
+     <div class="fb-page" data-href="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689" data-tabs="timeline" data-height="120" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689">Facebook</a></blockquote></div>
 </div>
 </div>
 </div>
@@ -320,7 +401,7 @@
                 <div class="row">
                    <div class="title-text-vaytindung" style="margin-top: 30px;">
 			        <h2>Đăng Kí Vay Tiêu Dùng</h2>
-					<form method="post" class="formdangki">
+					<form action="https://shinhanbankvay24h.com.vn/dichvu/dangki" method="post" class="formdangki">
 					<div class="wrap-modal-vaytieudung">
 						<div class="panel-cart-group">
 							<span class="panel-cart-text">Họ Và Tên (*):</span>
@@ -419,8 +500,5 @@
         </div>
     </div>
 </div><a href="#" class="back-to-top">
-<i class="icon-arrow-up"></i>
+<i class="fa fa-arrow-up" aria-hidden="true"></i>
 </a>
-
- 
-
