--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -110,23 +110,23 @@ Giới Thiệu
 </a>
 </li>
 <li>
-    <a href="https://shinhanbankvay24h.com.vn/tien-ich/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ SHINHANBANK &nbsp<i class="fa fa-chevron-down" aria-hidden="true"></i>
+    <a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ SHINHANBANK &nbsp<i class="fa fa-chevron-down" aria-hidden="true"></i>
 </a>
               <ul class="dropdown">
                       <li>
-            <a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-tieu-dung-">
+            <a href="/vay-tieu-dung">
             Vay Tiêu Dùng             </a>
             </li>
                     <li>
-            <a href="https://shinhanbankvay24h.com.vn/tien-ich/the-tin-dung-shinhanbank-">
+            <a href="/the-tin-dung-shinhanbank">
             thẻ tín dụng shinhanbank             </a>
             </li>
                     <li>
-            <a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-the-chap-nha-dat">
+            <a href="/vay-the-chap-nha-dat">
             Vay Thế Chấp Nhà đất            </a>
             </li>
                     <li>
-            <a href="https://shinhanbankvay24h.com.vn/tien-ich/ho-tro-cong-nhan-va-tu-doanh">
+            <a href="/ho-tro-cong-nhan-va-tu-doanh">
             Hỗ Trợ Công Nhân và Tự Doanh            </a>
             </li>
                  </ul>
@@ -189,22 +189,22 @@ Liên Hệ
         
         </li>
                 <li>
-            <a href="https://shinhanbankvay24h.com.vn/tien-ich/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ SHINHANBANK</a>
+            <a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ SHINHANBANK</a>
                               <ul>
                                       <li>
-                    <a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-tieu-dung->">
+                    <a href="/vay-tieu-dung>">
                     Vay Tiêu Dùng                     </a>
                     </li>
                                     <li>
-                    <a href="https://shinhanbankvay24h.com.vn/tien-ich/the-tin-dung-shinhanbank->">
+                    <a href="/the-tin-dung-shinhanbank>">
                     thẻ tín dụng shinhanbank                     </a>
                     </li>
                                     <li>
-                    <a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-the-chap-nha-dat>">
+                    <a href="/vay-the-chap-nha-dat>">
                     Vay Thế Chấp Nhà đất                    </a>
                     </li>
                                     <li>
-                    <a href="https://shinhanbankvay24h.com.vn/tien-ich/ho-tro-cong-nhan-va-tu-doanh>">
+                    <a href="/ho-tro-cong-nhan-va-tu-doanh">
                     Hỗ Trợ Công Nhân và Tự Doanh                    </a>
                     </li>
                                  </ul>
@@ -237,12 +237,6 @@ Liên Hệ
         <i class="fa fa-envelope-o" aria-hidden="true"></i>
         <span class="tooltip-contact tooltip-mail"><strong>vayshinhanbankvn@gmail.com</strong></span>
     </a>
-    <a class="buttons tootip"
-        href="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689"
-        rel="nofollow" target=”_blank”>
-        <i class="fa fa-facebook" aria-hidden="true"></i>
-        <span class="tooltip-contact tooltip-mail"><strong>Chat Facebook</strong></span>
-    </a>
 </div>
 <!-- end-->
 
@@ -273,7 +267,6 @@ Liên Hệ
 <script type="text/javascript" src="/public/js/number-divider.js"></script>
 <script type="text/javascript">
 
-var base_url="http://localhost:3000";
 //number format
 $('.sotienvay').divide({delimiter: ',',
 	divideThousand: false});
