--- a/views/support.handlebars
+++ b/views/support.handlebars
@@ -8,9 +8,12 @@
                    <a href=""> Trang mữ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Thời Trang Nam</span>  -->
-                   <a href="home"><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
-                                       <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
-                   <span class="current">Giới Thiệu</span>
+                   <a href="https://shinhanbankvay24h.com.vn/"><i class="icon-home"></i> Trang Chủ</a>
+                                           <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
+                       <a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ SHINHANBANK</a>
+                       
+                                        <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
+                   <span class="current">Hỗ Trợ Công Nhân và Tự Doanh</span>
                 </div>
             </div>
         </div>
@@ -19,26 +22,40 @@
 <div class="container" style="margin-bottom: 17px;background-color: white;padding: 3px;">
          <div class="row" style="margin-top: 13px">
     <div class="col-md-9 col-sm-12 col-xs-12">
-        <div class="title-text-vaytindung">
-			        <h2>Giới Thiệu</h2>
-	    </div>
-		<div class="content-dichvu">
-					   <div class="wrap-tempale-mot">Về Shinhanbank</div>
-<div class="wrap-tempale-hai">
-<div class="tempale-hai-content">
-<h2 class="title-blue">Ngân hàng Shinhan</h2>
-<div class="text">
-<p>Trực thuộc Tập đoàn Tài chính Shinhan, Ngân hàng Shinhan Hàn Quốc được xem là lá cờ đầu của tập đoàn với trụ sở tại 20 quốc gia. Ngân hàng Shinhan Hàn Quốc được Tạp chí Global Fincance vinh danh trong Top 50 Ngân hàng Lớn nhất Thế giới ở Thị trường mới nổi (2018) và Top 50 Ngân hàng Thương mại An toàn nhất Thế giới (2019).</p>
-<p>Cùng với mạng lưới hoạt động rộng khắp toàn cầu, sản phẩm và dịch vụ của Ngân hàng Shinhan Hàn Quốc được phân theo bảy nhóm chính (Bán lẻ, Ngân hàng Tư nhân, Quản lý Tài sản, Doanh nghiệp vừa và nhỏ, Tổ chức, Ngân hàng Đầu tư), nhằm đáp ứng nhu cầu tài chính đa dạng của khách hàng.</p>
-<h2 class="title-blue">Ngân Hàng Shinhan Việt Nam</h2>
-<div class="text">
-<p>Từ năm 1993, Ngân hàng Shinhan đã có đại diện thương mại tại Việt Nam dưới hình thức văn phòng đại diện đầu tiên tại TP. Hồ Chí Minh. Hiện nay, Ngân hàng Shinhan cung cấp danh mục các sản phẩm đa dạng và giải pháp tài chính ưu việt cho cả khối khách hàng cá nhân và doanh nghiệp. Sau hơn 27 năm thành lập và phát triển, Ngân hàng Shinhan đã mở rộng mạng lưới hoạt động khắp miền Bắc, Trung và Nam. Nhờ mạng lưới các chi nhánh và hệ thống ATM trải dài khắp nước cùng dịch vụ ngân hàng điện tử hiện đại. Ngân hàng Shinhan đang đồng hành cùng hàng triệu khách hàng. Năm 2020, Ngân hàng Shinhan tại Việt Nam được International Business Magazine trao tặng giải thưởng “Ngân hàng bán lẻ nước ngoài tốt nhất Việt Nam 2020”. Cũng trong năm 2020, Ngân hàng Shinhan lần thứ hai vinh dự đón nhận giải thưởng "Nơi làm việc tốt nhất châu Á" do tạp chí HR Asia trao tặng.<img src="https://shinhanbankvay24h.com.vn/gioi-thieu/../../source/shinhan_about.jpg" alt="" width="570" height="570" /></p>
-</div>
-</div>
-</div>
-</div>
-<p><br /><br /><br /></p>		</div>
-    </div>
+       <div class="title-text-vaytindung">
+			        <h2>Hỗ Trợ Công Nhân và Tự Doanh</h2>
+					<div class="content-dichvu">
+					   <p><img src="/ho-tro-cong-nhan-va-tu-doanh/../../source/shinhann%20fn.jpg" alt="" width="798" height="425" /></p>
+<h1 class="about-title second-title">NÂNG NIU<small class="sub-title">LỢI ÍCH TỐI ƯU CỦA BẠN</small></h1>
+<div class="utilities-other">
+<ul>
+<li><span class="img"><img class="default" src="https://www.shinhanfinance.com.vn/export/sites/default/.galleries/VayNgay/About/1-blue.png" alt="Miêu tả cho hình ảnh tại đây" /><img class="hover" src="https://www.shinhanfinance.com.vn/export/sites/default/.galleries/VayNgay/About/1-hover-blue.png" alt="Miêu tả cho hình ảnh tại đây" /></span>
+<p>Khoản <strong>vay tiêu dùng</strong> tối đa trong điều kiện của khách hàng <strong>đi làm hưởng lương</strong></p>
+</li>
+<li><span class="img"><img class="default" src="https://www.shinhanfinance.com.vn/export/sites/default/.galleries/VayNgay/About/2-blue.png" alt="Miêu tả cho hình ảnh tại đây" /><img class="hover" src="https://www.shinhanfinance.com.vn/export/sites/default/.galleries/VayNgay/About/2-hover-blue.png" alt="Miêu tả cho hình ảnh tại đây" /></span>
+<p>Thời hạn <strong>vay</strong> tối thiểu 12 – tối đa 48 tháng</p>
+</li>
+<li><span class="img"><img class="default" src="https://www.shinhanfinance.com.vn/export/sites/default/.galleries/VayNgay/About/3-blue.png" alt="Miêu tả cho hình ảnh tại đây" /><img class="hover" src="https://www.shinhanfinance.com.vn/export/sites/default/.galleries/VayNgay/About/3-hover-blue.png" alt="Miêu tả cho hình ảnh tại đây" /></span>
+<p> <strong>Lãi suất</strong> từ 18%/năm và tối đa 38%/năm <strong>trên dư nợ giảm dần</strong></p>
+</li>
+<li><span class="img"><img class="default" src="https://www.shinhanfinance.com.vn/export/sites/default/.galleries/VayNgay/4-blue.png" alt="Miêu tả cho hình ảnh tại đây" /><img class="hover" src="https://www.shinhanfinance.com.vn/export/sites/default/.galleries/VayNgay/4-hover-blue.png" alt="Miêu tả cho hình ảnh tại đây" /></span>
+<p><strong>Giải ngân nhanh</strong> chóng sau khi hồ sơ được duyệt</p>
+</li>
+<li><span style="color: #236fa1;"><strong>ĐIỀU KIỆN ĐỂ ĐƯỢC HỖ TRỢ VAY TÍN CHẤP</strong>. ( chỉ Cần Thỏa 1 Trong Các Điều Kiện Sau)</span></li>
+<li>- KHÁCH HÀNG Có đi làm hưởng lương ( Công Nhân ) Có hợp đồng lao động và BHYT của công ty cấp.</li>
+<li>- KHÁCH HÀNG Tự Kinh Doanh không làm tại công ty nhưng Có đứng tên trên hóa đơn điện hoặc Cafvec xe máy chính chủ.</li>
+<li>- KHÁCH HÀNG Có Mua Bảo Hiểm Nhân thọ Trên 1 năm</li>
+<li>- KHÁCH HÀNG Có đang vay trả góp tại 1 tổ chức tín dụng khác nhưng trả nợ tốt trên 6 Kỳ.</li>
+<li>-</li>
+<li> </li>
+</ul>
+<p><img src="/ho-tro-cong-nhan-va-tu-doanh/../../source/hinh%20anh%20shinhan%20(1).jpg" alt="hinh anh shinhan (1)" width="574" height="337" /></p>
+<p>Nhanh Tay Đăng Kí Ngay để được Ngân Hàng Shinhanbank hỗ trợ </p>
+<p>Liên Hệ : MR . Phong  SĐT :0707183645 , Zalo : 0934754919</p>
+<p><a href="../../"><span style="color: #3598db;"><strong>BẤM VÀO ĐÂY ĐỂ ĐĂNG KÍ KHOẢN VAY</strong></span></a></p>
+</div>					</div>
+ </div>
+      </div>
     <div class="col-md-3 col-sm-12 col-xs-12">
        
 <div class="widget-ct widget-categories mb-30" style="margin-top: 15px;">
@@ -57,6 +74,40 @@
        <div class="title-news">Tin Liên Quan</div>
     <div class="aside-content">
          			<div class="blog-list blog-image-list">
+				
+				<div class="loop-blog">
+					<div class="thumb-left">
+						<a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap--vay-tieu-dung-ngan-hang-shinhanbank">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a188add40d415a128d9b4ffbdb68f632.JPG" style="max-width:100%;" class="img-responsive" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
+					     </a>
+				    </div>
+				   <div class="name-right">
+							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap--vay-tieu-dung-ngan-hang-shinhanbank" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">Vay tín chấp - Vay tiêu dùng ngân hà...</a></h3>
+							<div class="date"><i class="fa fa-clock-o"></i> 09-09-2020</div>
+											
+				</div>
+			</div>
+	
+		</div>
+		<div class="clear"></div>
+					<div class="blog-list blog-image-list">
+				
+				<div class="loop-blog">
+					<div class="thumb-left">
+						<a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap-ngan-hang-shinhan-bank-khong-the-chap-tai-san-lai-suat-thap-nhat-thi-truong">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/ab03c4fdadadd4157f0073850ce3d832.png" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
+					     </a>
+				    </div>
+				   <div class="name-right">
+							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap-ngan-hang-shinhan-bank-khong-the-chap-tai-san-lai-suat-thap-nhat-thi-truong" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">Vay tín chấp ngân hàng Shinhan Bank ...</a></h3>
+							<div class="date"><i class="fa fa-clock-o"></i> 09-09-2020</div>
+											
+				</div>
+			</div>
+	
+		</div>
+		<div class="clear"></div>
+					<div class="blog-list blog-image-list">
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
@@ -111,23 +162,6 @@
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
-						<a href="https://shinhanbankvay24h.com.vn/blog-tin/thoa-trai-nghiem--hoan-trieu-diem-danh-cho-khach-hang-doanh-nghiep-hien-huu">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/279cf4dee50aae9998c6ec8e87e25e59.jpg" style="max-width:100%;" class="img-responsive" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/thoa-trai-nghiem--hoan-trieu-diem-danh-cho-khach-hang-doanh-nghiep-hien-huu" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">Thỏa trải nghiệm - Hoàn triệu điểm (...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 06-10-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
-					<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
 						<a href="https://shinhanbankvay24h.com.vn/blog-tin/niem-tin-cua-nguoi-dung-lam-nen-suc-manh-cua-ngan-hang-shinhan">
 	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/34e6bd2320923ac2c0ef7e6189a20833.jpg" style="max-width:100%;" class="img-responsive" title="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan" alt="Niềm tin của người dùng làm nên sức mạnh của Ngân hàng Shinhan">
 					     </a>
@@ -145,30 +179,13 @@
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
-						<a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap-ngan-hang-shinhan-bank-khong-the-chap-tai-san-lai-suat-thap-nhat-thi-truong">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/ab03c4fdadadd4157f0073850ce3d832.png" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
+						<a href="https://shinhanbankvay24h.com.vn/blog-tin/thoa-trai-nghiem--hoan-trieu-diem-danh-cho-khach-hang-doanh-nghiep-hien-huu">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/279cf4dee50aae9998c6ec8e87e25e59.jpg" style="max-width:100%;" class="img-responsive" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
 					     </a>
 				    </div>
 				   <div class="name-right">
-							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap-ngan-hang-shinhan-bank-khong-the-chap-tai-san-lai-suat-thap-nhat-thi-truong" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">Vay tín chấp ngân hàng Shinhan Bank ...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 09-09-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
-					<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
-						<a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap--vay-tieu-dung-ngan-hang-shinhanbank">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a188add40d415a128d9b4ffbdb68f632.JPG" style="max-width:100%;" class="img-responsive" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank." alt="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap--vay-tieu-dung-ngan-hang-shinhanbank" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">Vay tín chấp - Vay tiêu dùng ngân hà...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 09-09-2020</div>
+							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/thoa-trai-nghiem--hoan-trieu-diem-danh-cho-khach-hang-doanh-nghiep-hien-huu" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">Thỏa trải nghiệm - Hoàn triệu điểm (...</a></h3>
+							<div class="date"><i class="fa fa-clock-o"></i> 06-10-2020</div>
 											
 				</div>
 			</div>
@@ -223,7 +240,8 @@
 <div class="col-md-3 col-sm-6">
 <div class="block-subscribe">
 <h3 class="widget-title">Giới Thiệu</h3>
-    <p>Hotline: 0707183645</p></p>
+<p><p>24C Phan Đăng Lưu, Phường 6, Quận Bình Thạnh, HCM</p>
+<p>Hotline: 0707183645</p></p>
 </div>
 </div>
 <div class="col-md-3 col-sm-6">
@@ -242,6 +260,10 @@
       <input type="text" class="form-control textdangki" name="email" placeholder="Vui Lòng Nhập Email" style="margin-bottom: 5px">
       <button type="button" class="btn btn-common clickdangki">Đăng Kí</button>
 </div>
+</div>
+<div class="col-md-3 col-sm-6">
+     <h3 class="widget-title">Kết Nối Với Chúng Tôi</h3>
+     <div class="fb-page" data-href="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689" data-tabs="timeline" data-height="120" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689">Facebook</a></blockquote></div>
 </div>
 </div>
 </div>
@@ -320,7 +342,7 @@
                 <div class="row">
                    <div class="title-text-vaytindung" style="margin-top: 30px;">
 			        <h2>Đăng Kí Vay Tiêu Dùng</h2>
-					<form method="post" class="formdangki">
+					<form action="https://shinhanbankvay24h.com.vn/dichvu/dangki" method="post" class="formdangki">
 					<div class="wrap-modal-vaytieudung">
 						<div class="panel-cart-group">
 							<span class="panel-cart-text">Họ Và Tên (*):</span>
@@ -419,8 +441,5 @@
         </div>
     </div>
 </div><a href="#" class="back-to-top">
-<i class="icon-arrow-up"></i>
+<i class="fa fa-arrow-up" aria-hidden="true"></i>
 </a>
-
- 
-
