--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -23,9 +23,7 @@
          <div class="row">
     <div class="col-lg-12">
         <div class="wrap-contact" style="margin: 16px 0px;text-align: center;">
-        <p>Liên hệ Mr.Bằng
-            SĐT: 0707183645 
-            Zalo:0707183645</p></div>
+        <p>Liên hệ Mr.Bằng - SDT:0707183645 - Zalo:0707183645</p></div>
     </div>
 </div>
 <div class="row" style="margin-top: 21px">
@@ -61,7 +59,7 @@
    <div class="container">
       <div class="row">
 	     <div class="title-text-vaytindung title-mr-70">
-			        <h2>TẠI SAO NÊN CHỌN TPBANK</h2>
+			        <h2>TẠI SAO NÊN CHỌN Shinhanbank</h2>
 			     </div>
 				 <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
 		   <div class="item equalize">
@@ -99,16 +97,16 @@
 <div class="col-md-3 col-sm-6">
 <div class="block-subscribe">
 <h3 class="widget-title">Giới Thiệu</h3>
-<p>Hotline: 0862505919</p></p>
+<p>Hotline: 0707183645</p></p>
 </div>
 </div>
 <div class="col-md-3 col-sm-6">
 <h3 class="widget-title">SẢN PHẨM DỊCH VỤ SHINHANBANK</h3>
 <ul>
-      <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-tieu-dung-">Vay Tiêu Dùng </a></li>
-     <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/the-tin-dung-shinhanbank-">thẻ tín dụng shinhanbank </a></li>
-     <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-the-chap-nha-dat">Vay Thế Chấp Nhà đất</a></li>
-     <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
+      <li><a href="/vay-tieu-dung">Vay Tiêu Dùng </a></li>
+     <li><a href="/the-tin-dung-shinhanbank">thẻ tín dụng shinhanbank </a></li>
+     <li><a href="/vay-the-chap-nha-dat">Vay Thế Chấp Nhà đất</a></li>
+     <li><a href="/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công Nhân và Tự Doanh</a></li>
    
 </ul>
   </div>
