--- a/views/mortgage.handlebars
+++ b/views/mortgage.handlebars
@@ -8,9 +8,12 @@
                    <a href=""> Trang mữ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Thời Trang Nam</span>  -->
-                   <a href="home"><i class="fa fa-home" aria-hidden="true"></i> Trang Chủ</a>
-                                       <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
-                   <span class="current">Giới Thiệu</span>
+                   <a href="https://shinhanbankvay24h.com.vn/"><i class="icon-home"></i> Trang Chủ</a>
+                                           <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
+                       <a href="/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ SHINHANBANK</a>
+                       
+                                        <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
+                   <span class="current">Vay Thế Chấp Nhà đất</span>
                 </div>
             </div>
         </div>
@@ -19,26 +22,138 @@
 <div class="container" style="margin-bottom: 17px;background-color: white;padding: 3px;">
          <div class="row" style="margin-top: 13px">
     <div class="col-md-9 col-sm-12 col-xs-12">
-        <div class="title-text-vaytindung">
-			        <h2>Giới Thiệu</h2>
-	    </div>
-		<div class="content-dichvu">
-					   <div class="wrap-tempale-mot">Về Shinhanbank</div>
-<div class="wrap-tempale-hai">
-<div class="tempale-hai-content">
-<h2 class="title-blue">Ngân hàng Shinhan</h2>
+       <div class="title-text-vaytindung">
+			        <h2>Vay Thế Chấp Nhà đất</h2>
+					<div class="content-dichvu">
+					   <div id="gioi-thieu" class="box-type row">
+<div class="ct-left col-sm-4 col-xs-12">
+<h3 class="title-blue"><img src="/vay-the-chap-nha-dat/../../source/hinh%20anh%20shinhan.jpg" alt="" width="492" height="289" /></h3>
+<h3 class="title-blue">Giới thiệu</h3>
+</div>
+<div class="ct-right col-sm-8 col-xs-12">
 <div class="text">
-<p>Trực thuộc Tập đoàn Tài chính Shinhan, Ngân hàng Shinhan Hàn Quốc được xem là lá cờ đầu của tập đoàn với trụ sở tại 20 quốc gia. Ngân hàng Shinhan Hàn Quốc được Tạp chí Global Fincance vinh danh trong Top 50 Ngân hàng Lớn nhất Thế giới ở Thị trường mới nổi (2018) và Top 50 Ngân hàng Thương mại An toàn nhất Thế giới (2019).</p>
-<p>Cùng với mạng lưới hoạt động rộng khắp toàn cầu, sản phẩm và dịch vụ của Ngân hàng Shinhan Hàn Quốc được phân theo bảy nhóm chính (Bán lẻ, Ngân hàng Tư nhân, Quản lý Tài sản, Doanh nghiệp vừa và nhỏ, Tổ chức, Ngân hàng Đầu tư), nhằm đáp ứng nhu cầu tài chính đa dạng của khách hàng.</p>
-<h2 class="title-blue">Ngân Hàng Shinhan Việt Nam</h2>
+<p>Bạn lo lắng lãi suất không ổn định hoặc thủ tục vay vốn quá phức tạp?<br />Chương trình ưu đãi lãi suất hấp dẫn từ Ngân hàng Shinhan sẽ là điểm tựa tài chính vững chắc để bạn an tâm bắt đầu hành trình an cư lạc nghiệp (*).</p>
+</div>
+<div class="list-number">
+<div class="item">
+<div class="t-left">
+<div class="line"> </div>
+<p class="t-small">LỰA CHỌN 1</p>
+</div>
+<div class="t-right">
+<div class="number">6,5<sup>%/năm</sup></div>
+<p class="t-bt">cố định năm đầu</p>
+</div>
+</div>
+<div class="item">
+<div class="t-left">
+<div class="line"> </div>
+<p class="t-small">LỰA CHỌN 2</p>
+</div>
+<div class="t-right">
+<div class="number">7,4<sup>%/năm</sup></div>
+<p class="t-bt">cố định 2 năm đầu</p>
+</div>
+</div>
+<div class="item">
+<div class="t-left">
+<div class="line"> </div>
+<p class="t-small">LỰA CHỌN 3</p>
+</div>
+<div class="t-right">
+<div class="number">8,0<sup>%/năm</sup></div>
+<p class="t-bt">cố định 3 năm đầu</p>
+</div>
+</div>
+<div class="item">
+<div class="t-left">
+<div class="line"> </div>
+<p class="t-small">LỰA CHỌN 4</p>
+</div>
+<div class="t-right">
+<div class="number">8,7<sup>%/năm</sup></div>
+<p class="t-bt">cố định 4 năm đầu</p>
+<p class="t-bt"><img src="/vay-the-chap-nha-dat/../../source/hinh%20anh%20shinhan%20%202.jpg" alt="" width="580" height="387" /></p>
+</div>
+</div>
+</div>
+<p>Đặc biệt, Ngân hàng Shinhan dành gói ưu đãi với lãi suất cực kỳ hấp dẫn cho các khách hàng có giao dịch thường xuyên với Ngân hàng Shinhan.</p>
+<p>(*) Liên hệ chi nhánh gần nhất để biết thêm chi tiết. Điều kiện và điều khoản áp dụng</p>
+<p>Lãi suất áp dụng từ 01/10/2020</p>
+<p><span style="color: #e03e2d; background-color: #3598db;"><span class="btn-main left"><a style="color: #e03e2d; background-color: #3598db;" href="../../">ĐĂNG KÝ VAY</a></span> </span></p>
+</div>
+</div>
+<div class="row-line"> </div>
+<div id="loi-ich" class="box-type row">
+<div class="ct-left col-sm-4 col-xs-12">
+<h3 class="title-blue">Lợi ích</h3>
+</div>
+<div class="ct-right col-sm-8 col-xs-12">
+<div class="tab-expand">
+<div class="item ">
+<div class="head">
 <div class="text">
-<p>Từ năm 1993, Ngân hàng Shinhan đã có đại diện thương mại tại Việt Nam dưới hình thức văn phòng đại diện đầu tiên tại TP. Hồ Chí Minh. Hiện nay, Ngân hàng Shinhan cung cấp danh mục các sản phẩm đa dạng và giải pháp tài chính ưu việt cho cả khối khách hàng cá nhân và doanh nghiệp. Sau hơn 27 năm thành lập và phát triển, Ngân hàng Shinhan đã mở rộng mạng lưới hoạt động khắp miền Bắc, Trung và Nam. Nhờ mạng lưới các chi nhánh và hệ thống ATM trải dài khắp nước cùng dịch vụ ngân hàng điện tử hiện đại. Ngân hàng Shinhan đang đồng hành cùng hàng triệu khách hàng. Năm 2020, Ngân hàng Shinhan tại Việt Nam được International Business Magazine trao tặng giải thưởng “Ngân hàng bán lẻ nước ngoài tốt nhất Việt Nam 2020”. Cũng trong năm 2020, Ngân hàng Shinhan lần thứ hai vinh dự đón nhận giải thưởng "Nơi làm việc tốt nhất châu Á" do tạp chí HR Asia trao tặng.<img src="https://shinhanbankvay24h.com.vn/gioi-thieu/../../source/shinhan_about.jpg" alt="" width="570" height="570" /></p>
+<p>Lãi suất ưu đãi linh hoạt, tính trên dư nợ giảm dần</p>
+</div>
+</div>
+</div>
+<div class="item ">
+<div class="head">
+<div class="text">
+<p>Tài trợ lên đến 70% giá trị tài sản đảm bảo</p>
+</div>
+</div>
+</div>
+<div class="item ">
+<div class="head">
+<div class="text">
+<p>Thời hạn vay dài lên đến 20 năm</p>
+</div>
+</div>
+</div>
+<div class="item ">
+<div class="head">
+<div class="text">
+<p>Dịch vụ chăm sóc, hỗ trợ khách hàng chu đáo</p>
 </div>
 </div>
 </div>
 </div>
-<p><br /><br /><br /></p>		</div>
-    </div>
+<div class="text">
+<p>*Áp dụng cho công dân cư trú tại Việt Nam (*) từ 18-65 tuổi<br />(*) Công dân Việt Nam và người nước ngoài theo quy định của Pháp luật</p>
+</div>
+</div>
+</div>
+<div class="row-line"> </div>
+<div id="ho-so-dang-ky" class="box-type row">
+<div class="ct-left col-sm-12 col-xs-12">
+<h3 class="title-blue">Hồ sơ đăng ký</h3>
+</div>
+<div class="ct-right col-sm-12 col-xs-12">
+<div class="list-item-required">
+<div class="item col-sm-6 col-xs-12">
+<div class="box">
+<div class="icon"><img src="https://shinhan.com.vn/public/uploads/corporate/Valid-ID-Passport.png" alt="" /></div>
+<p>CMND/Hộ chiếu còn hiệu lực</p>
+</div>
+</div>
+<div class="item col-sm-6 col-xs-12">
+<div class="box">
+<div class="icon"><img src="https://shinhan.com.vn/public/uploads/corporate/family-record-book-KT3-temporary-residence.png" alt="" /></div>
+<p>Sổ hộ khẩu thường trú/sổ tạm trú/KT3/giấy xác nhận tạm trú</p>
+</div>
+</div>
+<div class="item col-sm-6 col-xs-12">
+<div class="box">
+<div class="icon"><img src="https://shinhan.com.vn/public/uploads/corporate/Evidence-of-property-ownership-if-any.png" alt="" /></div>
+<p>Chứng từ sở hữu tài sản hoặc giấy tờ hợp lệ có liên quan (nếu có)</p>
+</div>
+</div>
+</div>
+</div>
+</div>					</div>
+ </div>
+      </div>
     <div class="col-md-3 col-sm-12 col-xs-12">
        
 <div class="widget-ct widget-categories mb-30" style="margin-top: 15px;">
@@ -60,64 +175,13 @@
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
-						<a href="https://shinhanbankvay24h.com.vn/blog-tin/tung-bung-khai-truong-nhan-nghin-qua-tang">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/bd6eaab62077069666f51a3d203f2f2a.jpg" style="max-width:100%;" class="img-responsive" title="Tưng bừng khai trương, nhận nghìn quà tặng" alt="Tưng bừng khai trương, nhận nghìn quà tặng">
+						<a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap-ngan-hang-shinhan-bank-khong-the-chap-tai-san-lai-suat-thap-nhat-thi-truong">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/ab03c4fdadadd4157f0073850ce3d832.png" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
 					     </a>
 				    </div>
 				   <div class="name-right">
-							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/tung-bung-khai-truong-nhan-nghin-qua-tang" title="Tưng bừng khai trương, nhận nghìn quà tặng">Tưng bừng khai trương, nhận nghìn qu...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 06-10-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
-					<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
-						<a href="https://shinhanbankvay24h.com.vn/blog-tin/quy-khach-se-de-dang-tiep-can-goi-vay-cua-shinhan-bank-">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a249c6cb182ab86936dba6f1d289692e.jpg" style="max-width:100%;" class="img-responsive" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/quy-khach-se-de-dang-tiep-can-goi-vay-cua-shinhan-bank-" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">Quý khách sẽ dễ dàng tiếp cận gói va...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 16-09-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
-					<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
-						<a href="https://shinhanbankvay24h.com.vn/blog-tin/rut-tien-TTdung">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/3b05f83f529e3602eef89682a41678db.jpg" style="max-width:100%;" class="img-responsive" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG" alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/rut-tien-TTdung" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT Ư...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 08-06-2020</div>
-											
-				</div>
-			</div>
-	
-		</div>
-		<div class="clear"></div>
-					<div class="blog-list blog-image-list">
-				
-				<div class="loop-blog">
-					<div class="thumb-left">
-						<a href="https://shinhanbankvay24h.com.vn/blog-tin/thoa-trai-nghiem--hoan-trieu-diem-danh-cho-khach-hang-doanh-nghiep-hien-huu">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/279cf4dee50aae9998c6ec8e87e25e59.jpg" style="max-width:100%;" class="img-responsive" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
-					     </a>
-				    </div>
-				   <div class="name-right">
-							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/thoa-trai-nghiem--hoan-trieu-diem-danh-cho-khach-hang-doanh-nghiep-hien-huu" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">Thỏa trải nghiệm - Hoàn triệu điểm (...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 06-10-2020</div>
+							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap-ngan-hang-shinhan-bank-khong-the-chap-tai-san-lai-suat-thap-nhat-thi-truong" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">Vay tín chấp ngân hàng Shinhan Bank ...</a></h3>
+							<div class="date"><i class="fa fa-clock-o"></i> 09-09-2020</div>
 											
 				</div>
 			</div>
@@ -145,13 +209,13 @@
 				
 				<div class="loop-blog">
 					<div class="thumb-left">
-						<a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap-ngan-hang-shinhan-bank-khong-the-chap-tai-san-lai-suat-thap-nhat-thi-truong">
-	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/ab03c4fdadadd4157f0073850ce3d832.png" style="max-width:100%;" class="img-responsive" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường." alt="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">
+						<a href="https://shinhanbankvay24h.com.vn/blog-tin/tung-bung-khai-truong-nhan-nghin-qua-tang">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/bd6eaab62077069666f51a3d203f2f2a.jpg" style="max-width:100%;" class="img-responsive" title="Tưng bừng khai trương, nhận nghìn quà tặng" alt="Tưng bừng khai trương, nhận nghìn quà tặng">
 					     </a>
 				    </div>
 				   <div class="name-right">
-							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap-ngan-hang-shinhan-bank-khong-the-chap-tai-san-lai-suat-thap-nhat-thi-truong" title="Vay tín chấp ngân hàng Shinhan Bank không thế chấp tài sản, lãi suất thấp nhất thị trường.">Vay tín chấp ngân hàng Shinhan Bank ...</a></h3>
-							<div class="date"><i class="fa fa-clock-o"></i> 09-09-2020</div>
+							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/tung-bung-khai-truong-nhan-nghin-qua-tang" title="Tưng bừng khai trương, nhận nghìn quà tặng">Tưng bừng khai trương, nhận nghìn qu...</a></h3>
+							<div class="date"><i class="fa fa-clock-o"></i> 06-10-2020</div>
 											
 				</div>
 			</div>
@@ -169,6 +233,57 @@
 				   <div class="name-right">
 							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap--vay-tieu-dung-ngan-hang-shinhanbank" title="Vay tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.">Vay tín chấp - Vay tiêu dùng ngân hà...</a></h3>
 							<div class="date"><i class="fa fa-clock-o"></i> 09-09-2020</div>
+											
+				</div>
+			</div>
+	
+		</div>
+		<div class="clear"></div>
+					<div class="blog-list blog-image-list">
+				
+				<div class="loop-blog">
+					<div class="thumb-left">
+						<a href="https://shinhanbankvay24h.com.vn/blog-tin/thoa-trai-nghiem--hoan-trieu-diem-danh-cho-khach-hang-doanh-nghiep-hien-huu">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/279cf4dee50aae9998c6ec8e87e25e59.jpg" style="max-width:100%;" class="img-responsive" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)" alt="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">
+					     </a>
+				    </div>
+				   <div class="name-right">
+							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/thoa-trai-nghiem--hoan-trieu-diem-danh-cho-khach-hang-doanh-nghiep-hien-huu" title="Thỏa trải nghiệm - Hoàn triệu điểm (Dành cho Khách hàng Doanh Nghiệp hiện hữu)">Thỏa trải nghiệm - Hoàn triệu điểm (...</a></h3>
+							<div class="date"><i class="fa fa-clock-o"></i> 06-10-2020</div>
+											
+				</div>
+			</div>
+	
+		</div>
+		<div class="clear"></div>
+					<div class="blog-list blog-image-list">
+				
+				<div class="loop-blog">
+					<div class="thumb-left">
+						<a href="https://shinhanbankvay24h.com.vn/blog-tin/rut-tien-TTdung">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/3b05f83f529e3602eef89682a41678db.jpg" style="max-width:100%;" class="img-responsive" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG" alt="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">
+					     </a>
+				    </div>
+				   <div class="name-right">
+							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/rut-tien-TTdung" title="RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT ƯU ĐÃI 1.1% / THÁNG">RÚT TIỀN MẶT THẺ TÍN DỤNG LÃI SUẤT Ư...</a></h3>
+							<div class="date"><i class="fa fa-clock-o"></i> 08-06-2020</div>
+											
+				</div>
+			</div>
+	
+		</div>
+		<div class="clear"></div>
+					<div class="blog-list blog-image-list">
+				
+				<div class="loop-blog">
+					<div class="thumb-left">
+						<a href="https://shinhanbankvay24h.com.vn/blog-tin/quy-khach-se-de-dang-tiep-can-goi-vay-cua-shinhan-bank-">
+	                           <img src="https://shinhanbankvay24h.com.vn/upload/news/a249c6cb182ab86936dba6f1d289692e.jpg" style="max-width:100%;" class="img-responsive" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank " alt="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">
+					     </a>
+				    </div>
+				   <div class="name-right">
+							<h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/quy-khach-se-de-dang-tiep-can-goi-vay-cua-shinhan-bank-" title="Quý khách sẽ dễ dàng tiếp cận gói vay của Shinhan Bank ">Quý khách sẽ dễ dàng tiếp cận gói va...</a></h3>
+							<div class="date"><i class="fa fa-clock-o"></i> 16-09-2020</div>
 											
 				</div>
 			</div>
@@ -223,7 +338,8 @@
 <div class="col-md-3 col-sm-6">
 <div class="block-subscribe">
 <h3 class="widget-title">Giới Thiệu</h3>
-    <p>Hotline: 0707183645</p></p>
+<p><p>24C Phan Đăng Lưu, Phường 6, Quận Bình Thạnh, HCM</p>
+<p>Hotline: 0707183645</p></p>
 </div>
 </div>
 <div class="col-md-3 col-sm-6">
@@ -242,6 +358,10 @@
       <input type="text" class="form-control textdangki" name="email" placeholder="Vui Lòng Nhập Email" style="margin-bottom: 5px">
       <button type="button" class="btn btn-common clickdangki">Đăng Kí</button>
 </div>
+</div>
+<div class="col-md-3 col-sm-6">
+     <h3 class="widget-title">Kết Nối Với Chúng Tôi</h3>
+     <div class="fb-page" data-href="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689" data-tabs="timeline" data-height="120" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689">Facebook</a></blockquote></div>
 </div>
 </div>
 </div>
@@ -320,7 +440,7 @@
                 <div class="row">
                    <div class="title-text-vaytindung" style="margin-top: 30px;">
 			        <h2>Đăng Kí Vay Tiêu Dùng</h2>
-					<form method="post" class="formdangki">
+					<form action="https://shinhanbankvay24h.com.vn/dichvu/dangki" method="post" class="formdangki">
 					<div class="wrap-modal-vaytieudung">
 						<div class="panel-cart-group">
 							<span class="panel-cart-text">Họ Và Tên (*):</span>
@@ -419,8 +539,5 @@
         </div>
     </div>
 </div><a href="#" class="back-to-top">
-<i class="icon-arrow-up"></i>
+<i class="fa fa-arrow-up" aria-hidden="true"></i>
 </a>
-
- 
-
